[package]
name = "hyper-request-body"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "hyper Request Body"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/hyper-ext"
homepage = "https://github.com/bk-rs/hyper-ext"
documentation = "https://docs.rs/hyper-request-body"
keywords = []
categories = []
readme = "README.md"

[dependencies]
