[package]
name = "hyper-request-body"
version = "0.1.3"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "hyper Request Body"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/hyper-ext"
homepage = "https://github.com/bk-rs/hyper-ext"
documentation = "https://docs.rs/hyper-request-body"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
_priv_test_warp_request_body = ["warp-request-body"]
_priv_test_warp = ["warp"]

[dependencies]
hyper = { version = "0.14", default-features = false, features = ["stream"] }
bytes = { version = "1", default-features = false }

futures-util = { version = "0.3", default-features = false }
pin-project-lite = { version = "0.2", default-features = false }

warp-request-body = { version = "0.2", default-features = false, optional = true }
warp = { version = "0.3", default-features = false, optional = true }

hyper-body-to-bytes = { version = "0.1", default-features = false, path = "../hyper-body-to-bytes" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

futures-util = { version = "0.3" }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
skip_feature_sets = [
    ["_priv_test_warp_request_body", "_priv_test_warp"],
]
